testdata/parser/negative/22.txt
Parse error at 22.pdl:7:1: Duplicate label
dupl:	while (a < 10) {
^
